samples/_failures_safe/1761332743_f85cab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36f100e2.c: In function ‘main’:
./samples/SAFE/__tmp_36f100e2.c:169:5: error: expected declaration or statement at end of input
  169 |     }
      |     ^
